styles.css
/* CSS by Emily Nappen */

/* --- Color Palette --- 

    White: #F0F1F2
    Black: #0D0D0D
    Light Sky Blue: #96bcd3
    Sky Blue: #87bceb
    Dark Blue: #0f3f97
    Warm Tan: #F2D6B3

*/

/* Global Styles (base) MOBILE FIRST */
body {
    background-color: #F0F1F2;
    display: grid;
    grid-template-columns: 1fr;
    margin: 0;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    max-width: 100%;
}

header, nav, footer {
    text-align: center;
}

/* Header */
header {
    display: flex;
    justify-content: space-between;
    padding-top: 0.5rem;
    align-items: center;
    margin-right: 1.5rem;
    margin-left: 1rem;
    max-width: 100%;;
}
#logo {
    padding: 0.5rem;
    max-width: 8rem;
    margin: 1rem;
}


/* Main Elements*/
main {
    background-color: #F2D6B3;
    padding: 1rem;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 2em;
}

/* --- Navigation --- */
nav {
    background-color: #87bceb; 
}
nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
nav ul li {
    justify-content: space-between;
    letter-spacing: 0.5px;
}
nav a {
    text-decoration: none;
    color:#F0F1F2;
    font-weight: bold;
    background-color: #87bceb;
    padding: 0.5rem;
    display: block;
    border: 2px solid #87bceb;
}
nav a:hover {
    background-color: #F0F1F2;
    color: #0f3f97;
    border: 2px solid #87bceb;
}

/* Footer Elements */
.social-media img {
    max-width: 30px;
    padding: 0.5rem;
}
footer {
    background-color: #87bceb;
    color: #0f3f97;
    font-weight: 500;
}

/* --- Banner --- */
#banner-container {
    align-items: center;
    background-color: white;
    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
    margin: 1rem;
}
#banner {
    width: 100%;
    max-width: 573px;
    height: auto;
    display: block; 
}
#banner-text {
    text-align: center;
    justify-content: center;
    font-size: 1.6rem;
    padding: 1rem;
}

/* --- Card Row --- */
.card-row {
    margin: 1rem;
    background-color: #F0F1F2;
    padding: 2rem;   
    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
}
.card {
    flex: 1 1 300px;
    padding: 1.5rem;
    max-width: 250px;
    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
    margin: 1rem;
    background-color: #F0F1F2;
}
.card img {
    max-width: 250px; 
    object-position: center;
    width: 100%;
    height: auto; 
    display: block;
}
.card-row a {
    text-decoration: none;
    color: black;
}
.card:hover {
    box-shadow: 5px 10px 20px #87bceb;
}

/* About Me */
#about-me {
    padding: 2rem;
    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
    background-color: #F0F1F2;
    max-width: 700px;
    margin: 1rem auto;
    border-left:1vw solid #87bceb; 
    border-right: 1vw solid #87bceb;
}
#self {
    max-width: 300px;
    padding-top: 2rem;
    width: 100%;
}

/* Contact */
#Contact {
    background-color: #F0F1F2;
    padding: 1rem;
    margin: 1rem;
    max-width: 700px;
    border-left:3vw solid #87bceb; 
    border-right: 3vw solid #87bceb;
}
#Contact-Container {
    justify-content: center;
}
#Contact h3 {
    font-size: 3rem;
    text-align: center;
}
#social-feature {
    max-width: 55px;
    width: 100%;
    padding: 1rem;
}
#Contact-Info {
    justify-content: center;
    text-align: center;
    padding: 0.75rem;
}
#Contact-Info p {
    font-size: 1.15rem;
}

/* Holiday in the Breezeway Project */
#HitB-packages {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}
#HitB-packages > div {
    padding: 2rem;
    box-sizing: border-box;
    flex: 1 1 300px;
    max-width: 400px;
}
#HitB-packages img {
    max-width: 350px;
    width: 100%;
    height: auto;
    display: block;
}
#staged-content img {
    max-width: 300px;
    width: 100%;
    height: auto; 
}

/* Nut Tree - Promo */
#promo {
    display: flex;
    flex-wrap: wrap;
} 
#Promo img {
    max-width: 300px;
    width: 100%;
    height: auto;
}
#promo-staged {
    max-width: 600px;
}

/* Project Case Study Page Format */
.project-page {
    background-color: #F0F1F2;
    padding: 3rem;
}
.project-page img {
    max-width: 100%;
}
.project-page section {
    margin: 1rem;
}

/* FieldHaven */
#sm-strategy, #sm-results {
    max-width: 700px;
    width: 100%;
    height: auto;
}

/* SCAC Art Radio Logo */
#SCAC-concepts {
    max-width: 500px;
    width: 100%;
    height: auto;  
}
#logo-link {
    color:#0f3f97;
}

/* At Height Images */
#AHI-brainstorming{
    max-width: 600px;
    width: 100%;
    height: auto;
}
#AHI-branding {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 1rem;
}
#AHI-branding img {
    flex: 0 0 50%;
    max-width: 300px;
    height: auto;
}
#AHI-brandguide1 {
    max-width: 600px;
    width: 100%;
    height: auto;
}



@media screen and (min-width: 530px) {
    
    /* Navigation */
    nav {
        display:inline-flex;
        justify-content: center;
    }
    nav ul {
        display: flex;
    }
    nav ul li {
        padding-right: 1rem;
        padding-left: 1rem;
        flex: 1;
        text-align: center;
    }
    
    /* Card Row */
    .card-container {
        display: flex;
        flex-wrap: wrap;
        gap: 1rem;
    }
    .card {
        flex: 1 1 260px;
    }

    #Contact h3 {
    font-size: 4rem;
    }
    
}

@media screen and (min-width: 760px) {
    /* Contact */
    #Contact {
        margin: 1rem auto;
        border-left: 8vw solid #87bceb; 
        border-right: 8vw solid #87bceb;
    }
    #contact-containers {
        display: flex;
        margin: 1rem auto;
        justify-content: space-between;
        align-items: center;
        padding: 3rem;  
    }

    /* About */
    #about-container {
       display: flex;
       justify-content: space-between;
    }
    #about-text {
        width: 50%;
    }
    #self {
        padding-left: 2rem;
        padding-right: 0;
        align-items:end;
    }

    /* Holiday in the Breezeway */
    #HitB-container {
        display: flex;
    }
    #staged-content {
        padding-top: 3rem;
        min-width: 200px;
    }
    #HitB-main, .project-page {
        justify-content: center;
        align-items: center;
        max-width: 800px;
        margin: auto;
    }

}

@media screen and (min-width: 870px){
    /* About */
    #about-me {
        border-left: 6vw solid #87bceb; 
        border-right: 6vw solid #87bceb;
    }
}

@media screen and (min-width: 1000px) {

    /* Card Row */
    .card-row {
        display: flex;
        flex-wrap: wrap;
        max-width: 1095px;
        margin: 1rem auto;
    } 

    /* Contact and About */
    #Contact, #about-me {
        border-left: 13vw solid #87bceb; 
        border-right: 13vw solid #87bceb;
    }
}

@media screen and (min-width: 1200px){
    /* Banner */
    #banner-container {
        display: flex;
        max-width: 1160px;
        margin: 1rem auto;
    }
    #banner {
        justify-content: flex-start;
    }
    #banner-text {
        text-align: center;
        align-items: center;
        justify-content: center;
        max-width: 300px;
        margin:auto;
    }

    /* About Me */
    #about-me {
        border-left: 13vw solid #87bceb; 
        border-right: 13vw solid #87bceb;
    }
}

@media screen and (min-width: 1400px) {
    /* Contact and About */
    #Contact, #about-me {
        border-left: 11vw solid #87bceb; 
        border-right: 11vw solid #87bceb;
    }
}

